Runs on local k8s (see README.md)

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,6 @@ java {
 
 jib {
     to {
-        image = "gcr.io/myapp/jib-image"
+        image = "docker.io/lehwwmcrnjnhzjaglr/random-number-gen"
     }
 }
