--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,9 @@ micronaut:
         descriptions: true
         step: PT1M
     enabled: true
+
 kafka.bootstrap.servers: localhost:9092
+
+kubernetes:
+  client:
+    namespace: dev
